log

Thu 14 Mar 2024 08:38:16 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:7: error: unused variable ‘max’ [-Werror=unused-variable]
   14 |   int max = arr[0];
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
0875884
Thu 14 Mar 2024 08:38:23 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|7
total_score: 0/70
7b80f26
Thu 14 Mar 2024 08:40:18 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|7
total_score: 0/70
6a79a37
Thu 14 Mar 2024 08:40:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
da84b6e
Thu 14 Mar 2024 08:44:07 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:37:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   37 |   return arr;
      |          ^~~
exercises.c:28:6: note: declared here
   28 | void reverseArray(int arr[], int size)
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9e94cde
